<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="searchHint">Search for brands and products</string>
    <string name="newarrivals">New Arrivals</string>
    <string name="wintersale">winter sale</string>
    <string name="bestsellers">best sellers</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="check">Check Availability and Delivery Options</string>
    <string name="backpack">New Backpack</string>
    <string name="price">Rs. 2000/-</string>
    <string name="yellowshirt">Yellow Shirt</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create">Not registered? Click Here</string>
    <string name="username">Username</string>
    <string name="max_product_quantity_limit_reached">Maximum product limit reached</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <string name="facebook_app_id">1236794736425851</string>
    <string name="fb_login_protocol_scheme">fb1236794736425851</string>

</resources>
