<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.otimus.ecommerceapp.activities.LoginActivity">


    <EditText
        android:hint="@string/username"
        android:id="@+id/et_username"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="20"
        android:padding="13dp"

        />

    <EditText
        android:hint="@string/password"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="20"
        android:padding="13dp"
        android:id="@+id/et_password" />

    <Button
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/colorWhite"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btn_signin" />

    <TextView
        android:id="@+id/tv_register"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_fb_selector"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:text="@string/login_with_facebook"/>

</LinearLayout>
