<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context="com.example.otimus.ecommerceapp.activities.CartActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_cart"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_imageIcon"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/bag" />

                        <TextView
                            android:id="@+id/tv_productName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/tv_productPrice"
                            android:layout_alignStart="@+id/tv_productPrice"
                            android:layout_below="@+id/tv_productPrice"
                            android:text="@string/backpack"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_productPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@+id/iv_imageIcon"
                            android:layout_toRightOf="@+id/iv_imageIcon"
                            android:text="@string/price"
                            android:textColor="@color/lightBlack" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_productName"
                            android:layout_centerInParent="true"
                            android:layout_toLeftOf="@+id/up_image"
                            android:layout_toStartOf="@+id/up_image"
                            android:text="1"
                            android:textColor="@color/colorBlack"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/up_image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignTop="@+id/tv_productName"
                            android:layout_marginBottom="5dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginRight="40dp"
                            android:src="@drawable/up" />

                        <ImageView
                            android:id="@+id/down_image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignLeft="@+id/up_image"
                            android:layout_alignStart="@+id/up_image"
                            android:layout_centerVertical="true"
                            android:src="@drawable/down" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/yellowtshirt" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView1"
                            android:layout_alignStart="@+id/textView1"
                            android:layout_below="@+id/textView1"
                            android:text="@string/yellowshirt"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@+id/imageView1"
                            android:layout_toRightOf="@+id/imageView1"
                            android:text="Rs.1000/-"
                            android:textColor="@color/lightBlack" />

                        <ImageView
                            android:id="@+id/up_image1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignTop="@+id/textView4"
                            android:layout_marginEnd="40dp"
                            android:layout_marginRight="40dp"
                            android:src="@drawable/up" />

                        <ImageView
                            android:id="@+id/down_image1"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignLeft="@+id/up_image1"
                            android:layout_alignStart="@+id/up_image1"
                            android:layout_centerVertical="true"
                            android:src="@drawable/down" />

                        <ImageView
                            android:id="@+id/up_image2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignTop="@+id/textView4"
                            android:layout_marginBottom="5dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginRight="40dp"
                            android:src="@drawable/up" />

                        <ImageView
                            android:id="@+id/down_image2"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignLeft="@+id/up_image2"
                            android:layout_alignStart="@+id/up_image2"
                            android:layout_centerVertical="true"
                            android:src="@drawable/down" />

                        <TextView
                            android:id="@+id/textView6"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView4"
                            android:layout_centerInParent="true"
                            android:layout_toLeftOf="@+id/up_image1"
                            android:layout_toStartOf="@+id/up_image1"
                            android:text="1"
                            android:textColor="@color/colorBlack"
                            android:textSize="16dp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/hppendrive" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView2"
                            android:layout_alignStart="@+id/textView2"
                            android:layout_below="@+id/textView2"
                            android:text="Hp pendrive"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@+id/imageView2"
                            android:layout_toRightOf="@+id/imageView2"
                            android:text="Rs.1500/-"
                            android:textColor="@color/lightBlack" />

                        <ImageView
                            android:id="@+id/up_image3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignTop="@+id/textView5"
                            android:layout_marginEnd="40dp"
                            android:layout_marginRight="40dp"
                            android:src="@drawable/up" />

                        <ImageView
                            android:id="@+id/down_image3"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignLeft="@+id/up_image3"
                            android:layout_alignStart="@+id/up_image3"
                            android:layout_centerVertical="true"
                            android:src="@drawable/down" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView5"
                            android:layout_centerInParent="true"
                            android:layout_toLeftOf="@+id/up_image3"
                            android:layout_toStartOf="@+id/up_image3"
                            android:text="1"
                            android:textColor="@color/colorBlack"
                            android:textSize="16dp" />


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:text="TOTAL Rs. 4500/-"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/btn_proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/lightBlack"
                    android:elevation="3dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="Proceed to checkout"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />


            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>